content/_generated-doc/3.0/config/quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config.adoc

:summaryTableId: quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_configuration]]link:#quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.charset]]`link:#quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.charset[quarkus.datasource."datasource-name".reactive.mysql.charset]`

[.description]
--
Charset for connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_CHARSET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.collation]]`link:#quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.collation[quarkus.datasource."datasource-name".reactive.mysql.collation]`

[.description]
--
Collation for connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_COLLATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_COLLATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.ssl-mode]]`link:#quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.ssl-mode[quarkus.datasource."datasource-name".reactive.mysql.ssl-mode]`

[.description]
--
Desired security state of the connection to the server. 
See link:https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-mode[MySQL Reference Manual].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_SSL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_SSL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disabled`, `preferred`, `required`, `verify-ca`, `verify-identity` 
|`disabled`


a| [[quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.connection-timeout]]`link:#quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.connection-timeout[quarkus.datasource."datasource-name".reactive.mysql.connection-timeout]`

[.description]
--
Connection timeout in seconds

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.authentication-plugin]]`link:#quarkus-reactive-mysql-client-config-group-data-sources-reactive-my-sql-config-data-source-reactive-my-sql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mysql.authentication-plugin[quarkus.datasource."datasource-name".reactive.mysql.authentication-plugin]`

[.description]
--
The authentication plugin the client should use. By default, it uses the plugin name specified by the server in the initial handshake packet.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_AUTHENTICATION_PLUGIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_AUTHENTICATION_PLUGIN+++`
endif::add-copy-button-to-env-var[]
-- a|
`default`, `mysql-clear-password`, `mysql-native-password`, `sha256-password`, `caching-sha2-password` 
|`default`

|===